# goshooter_multiplayer

./: .gitignore  Cargo.toml  README.md
client/: Cargo.toml
client/src/: bullet.rs  client.rs  events.rs  main.rs  player.rs
common/: Cargo.toml
common/src/: lib.rs
server/: .gitignore  Cargo.toml
server/src/: bullet.rs  main.rs  player.rs  server.rs  team.rs
