[package]
name = "goshooter_client"
version = "1.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
ggez = "0.6.1"
mint = "0.5.7"
crossbeam = "0.8.1"
bytes = "1.1.0"
byteorder = "1.4.3"
nanoid = "0.4.0"
structopt = { version = "0.3", default-features = false }
