[package]
name = "goshooter_server"
version = "1.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
crossterm = "0.20.0"
crossbeam = "0.8.1"
bus = "2.2.3"
nanoid = "0.4.0"
structopt = { version = "0.3", default-features = false }
